<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultColor"
    android:backgroundTint="@color/defaultColor"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_ja_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_edit_ja_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/edit_ko_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_edit_ko_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/text_btn_save" />

    <Button
        android:id="@+id/btn_import_dict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/text_btn_import_dict" />

    <Button
        android:id="@+id/btn_apply_dict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/text_btn_apply_dict" />

    <EditText
        android:id="@+id/edit_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_edit_search"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>